# cedo-api

./: Cargo.toml  README.md  dfx.json
src/api/: Cargo.toml  api.did  build.sh
src/api/src/: bitcoin_api.rs  bitcoin_wallet.rs  ecdsa_api.rs  http_bootstrap.rs  lib.rs  types.rs  vendors.rs
