[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
hex = "0.4.3"
bitcoin = "0.28.1"
bs58 = "0.4.0"
ic-cdk-macros = "0.7.1"
ripemd = "0.1.1"
serde = {version = "1.0.132", features = ["derive"]}
sha2 = "0.10.2"
psm = "0.1.21"
ic-stable-structures = "0.6.0"
pluto = { git = "https://github.com/pu0238/pluto.git" }
serde_json = "1.0.108"
